--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,10 @@
 			<artifactId>spring-data-mongodb</artifactId>
 			<version>3.4.3</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-mongodb</artifactId>
+		</dependency>
 		<!--<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-test</artifactId>
