--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.data.mongodb.uri=mongodb+srv://desapp:KksaQufwIFYvzRAR@cluster0.msz3nhc.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=desapp-test
+server.port= ${PORT:8080}
