--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,6 +17,6 @@ jobs:
       - name: Deploy
         uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
         heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-        heroku_app_name: "backend-desapp"
+        heroku_app_name: backend-desapp
         heroku_email: "joaquin.decima@gmail.com"
         procfile: "web: java $JAVA_TOOL_OPTIONS -jar target/backend-desapp-api-0.0.1-SNAPSHOT.jar --spring.profiles.active=heroku"
