--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.data.mongodb.uri=mongodb+srv://desapp:KksaQufwIFYvzRAR@cluster0.msz3nhc.mongodb.net/?retryWrites=true&w=majority
 spring.data.mongodb.database=desapp-test
+
+springdoc.swagger-ui.path=/index.html
