--- a/package.json
+++ b/package.json
@@ -20,5 +20,11 @@
   "bugs": {
     "url": "https://github.com/JoaquinDecima/backend-desapp-api/issues"
   },
-  "homepage": "https://github.com/JoaquinDecima/backend-desapp-api#readme"
+  "homepage": "https://github.com/JoaquinDecima/backend-desapp-api#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "jest": "^29.2.1",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.6.5"
+  }
 }
