--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "jest": "^29.2.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5"
+  },
+  "devDependencies": {
+    "eslint": "^8.25.0"
   }
 }
