--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "express": "^4.18.2",
     "jest": "^29.2.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.6.5"
+    "mongoose": "^6.6.5",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.5.0"
   },
   "devDependencies": {
     "eslint": "^8.25.0"
