--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.1",
   "description": "Backend Desarrollo de aplicaciones UNQ",
   "main": "src/server.js",
+  "type": "module",
   "engines": {
     "node": "18.x"
   },
@@ -25,6 +26,7 @@
   },
   "homepage": "https://github.com/JoaquinDecima/backend-desapp-api#readme",
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jest": "^29.2.1",
     "jsonwebtoken": "^8.5.1",
