--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/JoaquinDecima/backend-desapp-api#readme",
   "dependencies": {
+    "@microsoft/eslint-formatter-sarif": "^3.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jest": "^29.2.1",
