--- a/.github/workflows/eslint.yml
+++ b/.github/workflows/eslint.yml
@@ -13,7 +13,7 @@ on:
   push:
     branches: [ "main" ]
   pull_request:
-    # The branches below must be a subset of the branches above
+    types: [opened, synchronize, reopened]
     branches: [ "main" ]
   schedule:
     - cron: '42 9 * * 0'
