--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "homepage": "https://github.com/JoaquinDecima/backend-desapp-api#readme",
   "dependencies": {
     "@microsoft/eslint-formatter-sarif": "^3.0.0",
+    "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
