--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
+    "node-schedule": "^2.1.0",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0"
   },
