--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "node src/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha ./test/**/*.test.js",
     "dev": "nodemon src/server.js"
   },
   "repository": {
@@ -41,8 +41,9 @@
   },
   "devDependencies": {
     "@microsoft/eslint-formatter-sarif": "^3.0.0",
+    "chai": "^4.3.7",
     "eslint": "^8.25.0",
-    "jest": "^29.2.1",
+    "mocha": "^10.1.0",
     "nodemon": "^2.0.20"
   }
 }
