--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "start": "node src/server.js",
     "test": "mocha ./test/**/*.test.js",
-    "dev": "nodemon src/server.js"
+    "dev": "nodemon src/server.js",
+    "lint": "eslint src/**/*.js"
   },
   "repository": {
     "type": "git",
