--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "node src/server.js",
-    "test": "mocha ./test/**/*.test.js",
+    "test": "nyc mocha ./test/**/*.test.js --exit",
     "dev": "nodemon src/server.js",
     "lint": "eslint src/**/*.js"
   },
@@ -32,6 +32,7 @@
     "apicache": "^1.6.3",
     "axios": "^1.1.3",
     "bcrypt": "^5.1.0",
+    "chai-http": "^4.3.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
@@ -46,6 +47,7 @@
     "chai": "^4.3.7",
     "eslint": "^8.25.0",
     "mocha": "^10.1.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "nyc": "^15.1.0"
   }
 }
