--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "node src/server.js",
-    "test": "nyc mocha ./test/**/*.test.js --exit",
+    "test": "c8 mocha ./test/**/*.test.js --exit",
     "dev": "nodemon src/server.js",
     "lint": "eslint src/**/*.js"
   },
@@ -44,10 +44,10 @@
   },
   "devDependencies": {
     "@microsoft/eslint-formatter-sarif": "^3.0.0",
+    "c8": "^7.12.0",
     "chai": "^4.3.7",
     "eslint": "^8.25.0",
     "mocha": "^10.1.0",
-    "nodemon": "^2.0.20",
-    "nyc": "^15.1.0"
+    "nodemon": "^2.0.20"
   }
 }
