--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mongoose": "^6.6.5",
     "morgan": "^1.10.0",
     "node-schedule": "^2.1.0",
+    "redis": "^4.5.1",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0"
   },
