Implement audit middleware

--- a/package.json
+++ b/package.json
@@ -37,8 +37,9 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.6.5",
-    "morgan": "^1.10.0",
     "node-schedule": "^2.1.0",
+    "on-finished": "^2.4.1",
+    "pino": "^8.7.0",
     "redis": "^4.5.1",
     "swagger-jsdoc": "^6.2.5",
     "swagger-ui-express": "^4.5.0"
