--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "start": "node src/server.js",
     "test": "c8 mocha ./test/**/*.test.js --exit",
+    "arch-test": "jest ./architecture-test/*.test.js",
     "dev": "nodemon src/server.js",
     "lint": "eslint src/**/*.js"
   },
@@ -46,9 +47,11 @@
   },
   "devDependencies": {
     "@microsoft/eslint-formatter-sarif": "^3.0.0",
+    "archijs": "^2.2.6",
     "c8": "^7.12.0",
     "chai": "^4.3.7",
     "eslint": "^8.25.0",
+    "jest": "^29.3.1",
     "mocha": "^10.1.0",
     "nodemon": "^2.0.20"
   }
