--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "backend-desapp-api",
-  "version": "2.0.0",
+  "version": "3.1.0",
   "description": "Backend Desarrollo de aplicaciones UNQ",
   "main": "src/server.js",
   "type": "module",
@@ -10,7 +10,7 @@
   "scripts": {
     "start": "node src/server.js",
     "test": "c8 mocha ./test/**/*.test.js --exit",
-    "arch-test": "jest ./architecture-test/*.test.js",
+    "test:arch": "jest ./architecture-test/*.test.js",
     "dev": "nodemon src/server.js",
     "lint": "eslint src/**/*.js"
   },
